# eijiro-widget

./: .gitignore  Cargo.toml  PKGBUILD  README.md  eijiro-widget.desktop
src/: gtk_ui.rs  indexer.rs  lib.rs  main.rs  models.rs  parser.rs  search.rs
