[package]
name = "eijiro-widget"
version = "0.1.0"
edition = "2021"
authors = ["REO2248"]
license = "MIT"
description = "A GTK-based desktop widget for searching Eijiro, a English-Japanese dictionary."

[lints.clippy]
all = "deny"

[dependencies]
fst = "=0.4.7"
memmap2 = "=0.7.1"
aho-corasick = "=1.1.4"
bincode = "=1.3.3"
encoding_rs = "=0.8.35"
serde = { version = "=1.0.228", features = ["derive"] }
clap = { version = "=4.6.1", features = ["derive"] }
anyhow = "=1.0.102"
log = "=0.4.29"
env_logger = "=0.11.10"
bytemuck = { version = "=1.25.0", features = ["derive"] }
gtk4 = "=0.9.7"
libadwaita = "=0.7.2"
gtk4-layer-shell = "=0.4.0"
glib = "=0.20.12"
fxhash = "=0.2.1"
async-channel = "=2.5.0"
